# cowork-frontend-moulaidi

./: .env.example  .gitignore  .pnpmfile.cjs  Cargo.toml  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.pnpm/: settings.yaml
docs/plans/: persistent-project-memory-status.md  persistent-project-memory.md
scripts/: ensure-dev-resources.mjs  inline-token-style-baseline.json  inline-token-style-guardrail.d.mts  inline-token-style-guardrail.mjs  prebuild.mjs
src/: App.css  App.telemetry.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: fetch-gh.mjs  fetch-git.mjs  fetch-node.mjs
src-tauri/src/: analytics.rs  lib.rs
src/adapters/: engine-adapter.ts
src/chat/: ChatView.test.tsx  ChatView.tsx
src/components/: ArtifactChips.test.tsx  ArtifactChips.tsx  ArtifactPreview.test.tsx  ArtifactPreview.tsx  ChatMessage.tsx  ChatWidthToggle.tsx  CommandPalette.test.tsx  CommandPalette.tsx  ConversationSearch.test.tsx  ConversationSearch.tsx  CustomInstructions.test.tsx  CustomInstructions.tsx  ExtensionUiDialog.tsx  FeedbackButtons.test.tsx  HelpDialog.test.tsx  HelpDialog.tsx  InThreadFind.tsx  MemoryChip.test.tsx  MemoryChip.tsx  MessageInput.queue.test.tsx  MessageInput.steering.test.tsx  MessageInput.tsx  ModelSelector.test.tsx  ModelSelector.tsx  RightPanel.tsx  SettingsPage.test.tsx  SettingsPage.tsx  Sidebar.test.tsx  Sidebar.tsx  SplashScreen.test.tsx  SplashScreen.tsx  ToolCallTimeline.tsx
src/hooks/: useArtifactLoader.test.ts  useArtifactLoader.ts  (+13 more)
(+48 files in other folders)
